Revision History for Perl module ActiveResource

0.02 2014-03-
    - Added abstract to pod

0.01 2010-03-07
    - Initial release to CPAN: Implement Base#find(id) and Base#save.
